# docker-compose-collection

./: .gitignore  REMARD.md  基礎 Docker 實作教學 會議通知.md  基礎 Docker 實作教學 第 1 部分：快速入門.md  基礎 Docker 實作教學 第 2 部分：基本 Docker 指令實戰.md  基礎 Docker 實作教學 第 3 部分：Dockerfile 實作.md  基礎 Docker 實作教學 第 4 部分：Docker Compose 多容器應用.md  基礎 Docker 實作教學 第 5 部分：課程總結.md
dockercmd/: docker.html  mysql.env
dockerfile/flask-app/: .dockerignore  Dockerfile  app.py
dockerfile/flask-app/templates/: index.html
gitlab/: .env.example  docker-compose.yaml  generate_cert.sh
keycloak/: REMARD.md  docker-compose.dev.yml  docker-compose.yml
keycloak/test-keycloak/backend/: .env.example  README.md  main.py  pyproject.toml  start.sh
keycloak/test-keycloak/frontend/: README.md  package-lock.json  package.json
keycloak/test-keycloak/frontend/public/: index.html
keycloak/test-keycloak/frontend/src/: App.css  App.tsx  KeycloakProvider.tsx  keycloak.ts
keycloak/test-keycloak/frontend/src/components/: Navigation.tsx  ProtectedRoute.tsx
keycloak/test-keycloak/frontend/src/pages/: Home.tsx  Protected.tsx
n8n/: .env.example  docker-compose.yml
n8n/helm/: Chart.yaml  values.yaml
n8n/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  webhook-deployment.yaml  worker-deployment.yaml
