[project]
name = "keycloak-backend-test"
version = "0.1.0"
description = "Keycloak API 測試後端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pydantic>=2.4.0",
    "python-keycloak>=3.7.0",
    "cryptography>=3.4.0",
]
